Bug 399180 - [CBI] restructure aggregator and output directories